[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Player/no_anim_0.png.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD/HUD_Base.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/dogicapixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/PixelSplitter-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Music/Buttoms/selec0.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/Buttoms/select1.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.384314, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.168627, 0.0392157, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.027451, 0.14902, 0.121569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 4 )

[node name="HUD_Base" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Fondo" type="Control" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="Fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = 30.0
margin_bottom = 5.0
color = Color( 0.027451, 0.14902, 0.121569, 0.870588 )

[node name="Imagen_Jugador" type="TextureRect" parent="Fondo"]
margin_left = -5.0
margin_top = -2.0
margin_right = 59.0
margin_bottom = 62.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Etiqueta_LV" type="Label" parent="Fondo"]
margin_left = 75.0
margin_top = 16.0
margin_right = 98.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 3 )
text = "LV: "

[node name="Nivel_Jugador" type="Label" parent="Fondo/Etiqueta_LV"]
anchor_left = 1.08696
anchor_right = 1.43478
anchor_bottom = 1.0
margin_left = 0.521603
margin_top = 3.0
margin_right = 0.521603
margin_bottom = 3.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Etiqueta_Créditos" type="Label" parent="Fondo"]
margin_left = 75.0
margin_top = 41.0
margin_right = 101.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 5 )
text = "CD: "

[node name="Creditos_Jugador" type="Label" parent="Fondo/Etiqueta_Créditos"]
margin_left = 44.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 6 )
text = "000000"

[node name="ProgressBar" type="ProgressBar" parent="Fondo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -20.0
margin_right = 103.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0

[node name="letras_exp" type="Label" parent="Fondo/ProgressBar"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -6.5
margin_right = 43.0
margin_bottom = 7.5
text = "EXP"

[node name="numero_exp" type="Label" parent="Fondo/ProgressBar"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -6.5
margin_right = 42.0
margin_bottom = 7.5
text = "0"

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -100.0
margin_right = 202.0
margin_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -56.0
color = Color( 0.027451, 0.14902, 0.121569, 0.870588 )

[node name="Save_Buttom" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -10.0
margin_right = 73.0
margin_bottom = 20.0
custom_colors/font_color_focus = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Guardar "

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -168.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "¿Desea guardar la partida?"

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -44.0
margin_right = 193.0
margin_bottom = -30.0
custom_colors/font_color = Color( 0.866667, 0.172549, 0.0823529, 1 )
custom_fonts/font = SubResource( 10 )
text = "*Si tiene una partida anteriormente esta se rescribira*"

[node name="mouse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="mouse_entered" from="Control/Save_Buttom" to="." method="_on_Save_Buttom_mouse_entered"]
[connection signal="pressed" from="Control/Save_Buttom" to="." method="_on_Save_Buttom_pressed"]
